Colocando animaçãono section home

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
+
 <body>
 
     <header>
@@ -31,22 +33,43 @@
     </header>
 
     <main>
-        <section id="home" class="hero">
+        <!-- <section id="home" class="hero">
             <div class="hero-text">
                 <h1>Especialista em Direito Criminal e Processo Penal: Buscando Suas Garantias Fundamentais [cite: 1]</h1>
                 <p>Defesa Criminal Estratégica, Focada e Ágil para Evitar Erros Irreparáveis [cite: 5]</p>
                 <a href="https://wa.me/5511964287306" target="_blank" class="cta-button">FALE CONOSCO AGORA MESMO</a>
                 <p class="sigilo">Atendimento 100% sigiloso e direto pelo WhatsApp[cite: 6].</p>
             </div>
-        </section>
+        </section> -->
+<section id="home" class="hero">
+    <div class="video-background">
+        <video autoplay muted loop playsinline id="fundo-video">
+            <source src="Fundo_para_site.mp4" type="video/mp4">
+            Seu navegador não suporta a tag de vídeo.
+        </video>
+    </div>
+    
+    <div class="hero-text">
+        <h1>Especialista em Direito Criminal e Processo Penal: Buscando Suas Garantias Fundamentais</h1>
+        <p>Defesa Criminal Estratégica, Focada e Ágil para Evitar Erros Irreparáveis</p>
+        <a href="https://wa.me/5511964287306" target="_blank" class="cta-button">FALE CONOSCO AGORA MESMO</a>
+        <p class="sigilo">Atendimento 100% sigiloso e direto pelo WhatsApp.</p>
+    </div>
+</section>
 
         <section id="sobre" class="content-section">
             <h2 class="section-title">Dr. Altier: Sua Defesa de Confiança</h2>
             <div class="text-block">
-                <p>O **Dr. Altier é especialista em direito criminal e processo penal**, e dedica-se a buscar suas garantias fundamentais perante a justiça democrática de direito[cite: 1].</p>
-                <p>Advogar na área criminal é um compromisso incansável em buscar, dentro do poder judiciário, as prerrogativas das normas penais e constitucionais, com o máximo de zelo e carinho em cada etapa do processo[cite: 17]. Além disso, é defender e combater a injustiça, garantindo a liberdade de locomoção[cite: 18].</p>
-                <p>Nossa filosofia é clara: **"Uma sociedade pluralista só é digna quando exercemos nossa liberdade prevista em lei"**[cite: 2].</p>
-                <p>Em direito penal, a atuação é baseada no princípio da *última ratio*: o indivíduo só será privado de sua liberdade quando se esgotarem todas as esferas administrativas[cite: 4].</p>
+                <p>O **Dr. Altier é especialista em direito criminal e processo penal**, e dedica-se a buscar suas
+                    garantias fundamentais perante a justiça democrática de direito[cite: 1].</p>
+                <p>Advogar na área criminal é um compromisso incansável em buscar, dentro do poder judiciário, as
+                    prerrogativas das normas penais e constitucionais, com o máximo de zelo e carinho em cada etapa do
+                    processo[cite: 17]. Além disso, é defender e combater a injustiça, garantindo a liberdade de
+                    locomoção[cite: 18].</p>
+                <p>Nossa filosofia é clara: **"Uma sociedade pluralista só é digna quando exercemos nossa liberdade
+                    prevista em lei"**[cite: 2].</p>
+                <p>Em direito penal, a atuação é baseada no princípio da *última ratio*: o indivíduo só será privado de
+                    sua liberdade quando se esgotarem todas as esferas administrativas[cite: 4].</p>
             </div>
         </section>
 
@@ -66,7 +89,9 @@
                     <li>Demais Medidas de Urgências [cite: 14]</li>
                 </ul>
             </div>
-            <p class="dica">Se você está enfrentando um processo criminal, é essencial ter boas estratégias e experiências, capaz de agir com foco e agilidade. Escolha desde o início uma defesa de confiança para evitar erros irreparáveis[cite: 5].</p>
+            <p class="dica">Se você está enfrentando um processo criminal, é essencial ter boas estratégias e
+                experiências, capaz de agir com foco e agilidade. Escolha desde o início uma defesa de confiança para
+                evitar erros irreparáveis[cite: 5].</p>
         </section>
 
         <section id="valores" class="content-section dark-section">
@@ -78,15 +103,18 @@
                 </div>
                 <div class="valor-item">
                     <h3>Responsabilidade e Confidencialidade Total [cite: 22]</h3>
-                    <p>Atendimento 100% sigiloso [cite: 6] e focado na defesa dos direitos e da liberdade de locomoção[cite: 18].</p>
+                    <p>Atendimento 100% sigiloso [cite: 6] e focado na defesa dos direitos e da liberdade de
+                        locomoção[cite: 18].</p>
                 </div>
                 <div class="valor-item">
                     <h3>Acesso e Ascensão aos Seus Direitos [cite: 21]</h3>
-                    <p>Todos têm o direito de ser defendido por um advogado de sua confiança e receber um julgamento justo e sigiloso[cite: 3].</p>
+                    <p>Todos têm o direito de ser defendido por um advogado de sua confiança e receber um julgamento
+                        justo e sigiloso[cite: 3].</p>
                 </div>
                 <div class="valor-item">
                     <h3>Atendimento 24 Horas [cite: 16]</h3>
-                    <p>Disponibilidade online e imediata para medidas de urgência e acompanhamento de inquérito[cite: 14, 16].</p>
+                    <p>Disponibilidade online e imediata para medidas de urgência e acompanhamento de inquérito[cite:
+                        14, 16].</p>
                 </div>
             </div>
         </section>
@@ -96,7 +124,9 @@
             <div class="contato-content">
                 <div class="contato-info">
                     <h3>Informações de Contato</h3>
-                    <p>E-mail: <a href="mailto:Lopesdeoliveiraadvocacia42@gmail.com">Lopesdeoliveiraadvocacia42@gmail.com</a> </p>
+                    <p>E-mail: <a
+                            href="mailto:Lopesdeoliveiraadvocacia42@gmail.com">Lopesdeoliveiraadvocacia42@gmail.com</a>
+                    </p>
                     <p>Telefones: (11) 964287306 ou (11) 99582-0913 [cite: 26]</p>
                     <p>Localização: São Paulo - SP [cite: 27]</p>
                     <p class="sigilo-info">Atendimento 100% sigiloso e direto pelo WhatsApp[cite: 6].</p>
@@ -144,4 +174,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
